# ASIO2WASAPI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  readme.txt
InnoSetup/: ASIO2WASAPI2.iss  trgkASIO.iss
Source/: ASIO2WASAPI.sln  ASIO2WASAPI2.cpp  ASIO2WASAPI2.h  ASIO2WASAPI2.sln  ASIO2WASAPI2Impl.cpp  ASIO2WASAPI2Impl.h  COMBaseClasses.cpp  COMBaseClasses.h  DriverSettings.cpp  PreparedState.cpp  PreparedState.h  RunningState.cpp  RunningState.h  TrgkASIO.cpp  TrgkASIO.h  TrgkASIOImpl.cpp  TrgkASIOImpl.h  register.cpp  version.h
Source/ASIO2WASAPI2/: ASIO2WASAPI2.cpp  ASIO2WASAPI2.h  ASIO2WASAPI2Impl.cpp  ASIO2WASAPI2Impl.h  CUnknownImpl.cpp  DriverSettings.cpp  DriverSettings.h  PreparedState.cpp  PreparedState.h  RunningState.cpp  RunningState.h
Source/ASIOSDK/common/: asio.h
Source/Driver/: ASIO2WASAPI.cpp  ASIO2WASAPI.h  ASIO2WASAPI.rc  ASIO2WASAPI.vcxproj  ASIO2WASAPI.vcxproj.filters  ASIO2WASAPI2.cpp  ASIO2WASAPI2.h  ASIO2WASAPI2.rc  ASIO2WASAPI2.vcxproj  ASIO2WASAPI2.vcxproj.filters  COMBaseClasses.cpp  COMBaseClasses.h  TrayOpener.cpp  TrayOpener.hpp  WASAPIUtils.cpp  WASAPIUtils.h  dllmain.cpp  logger.cpp  logger.h  register.cpp  resource.h  stdafx.h  version.h
Source/Driver/ASIO2WASAPI2/: ASIO2WASAPI2.cpp  ASIO2WASAPI2.h  ASIO2WASAPI2.rc  ASIO2WASAPI2Impl.cpp  ASIO2WASAPI2Impl.h  CUnknownImpl.cpp  ControlDlg.cpp  DriverSettings.cpp  DriverSettings.h  PreparedState.cpp  PreparedState.h  RunningState.cpp  RunningState.h  regRW.cpp
Source/Driver/MessageWindow/: KeyDownListener.cpp  KeyDownListener.h  MessageWindow.cpp  MessageWindow.h  TrayHandler.cpp
Source/Driver/WASAPIOutput/: ClapRenderer.cpp  ClapRenderer.h  WASAPIOutput.cpp  WASAPIOutput.h  WASAPIOutputEvent.cpp  WASAPIOutputEvent.h  WASAPIOutputPush.cpp  WASAPIOutputPush.h  createIAudioClient.cpp  createIAudioClient.h  iidConstant.cpp
Source/Driver/lib/r8brain_free_src/: CDSPHBDownsampler.inc  CDSPHBUpsampler.h  fft4g.h
Source/Driver/r8brain_free_src/: CDSPFIRFilter.h  CDSPHBDownsampler.h  CDSPHBUpsampler.inc  CDSPProcessor.h  CDSPRealFFT.h  CDSPResampler.h  CDSPSincFilterGen.h  r8bbase.cpp  r8bbase.h  r8bconf.h
Source/Driver/res/: ASIO2WASAPI2.rc  resource.h
Source/Driver/utils/: AppException.h  ResourceLoad.cpp  ResourceLoad.h  TrayOpener.cpp  TrayOpener.hpp  WASAPIUtils.cpp  WASAPIUtils.h  WaveLoad.cpp  WaveLoad.h  accurateTime.cpp  accutateTime.cpp  accutateTime.h  hexdump.cpp  hexdump.h  homeDirFilePath.cpp  homeDirFilePath.h  json.hpp  logger.cpp  logger.h  raiiUtils.h  utf8convert.cpp  utf8convert.h
Source/Install/: Install.cpp  Install.rc  Install.vcxproj  stdafx.h
Source/MessageWindow/: KeyDownListener.cpp  KeyDownListener.h  MessageWindow.cpp  MessageWindow.h  TrayHandler.cpp  TrayHandler.h
Source/Uninstall/: Uninstall.cpp  Uninstall.rc  Uninstall.vcxproj  stdafx.h
Source/WASAPIOutput/: ClapRenderer.cpp  ClapRenderer.h  WASAPIOutput.h  WASAPIOutputEvent.cpp  WASAPIOutputEvent.h  WASAPIOutputPush.h  createIAudioClient.cpp  createIAudioClient.h
Source/audioInputs/: AudioSource.h  ClapRenderer.cpp  KeyboardClapSource.h
Source/audioInputs/keyboardClap/: ClapRenderer.cpp  ClapRenderer.h  KeyboardClapSource.cpp  KeyboardClapSource.h
Source/audioInputs/wasapiOutputLoopback/: WASAPIOutputLoopbackSource.cpp  WASAPIOutputLoopbackSource.h
Source/audioOutputs/: WASAPIOutputEvent.cpp  WASAPIOutputEvent.h  WASAPIUtils.cpp  WASAPIUtils.h  createOutputIAudioClient.cpp  createOutputIAudioClient.h  iidConstant.cpp
Source/dllentry/: COMBaseClasses.cpp  COMBaseClasses.h  dllmain.cpp  register.cpp
Source/include/: AudioFile.h
Source/include/spdlog/: tweakme.h
Source/include/spdlog/details/: circular_q.h
Source/inputs/: ClapRenderer.h  KeyboardClapSource.cpp  KeyboardClapSource.h
Source/lib/: WinReg.hpp
Source/lib/ASIOSDK/common/: asio.h
Source/lib/nana-1.7.4/source/detail/: platform_spec_windows.cpp
Source/lib/nana-1.7.4/source/detail/mswin/: platform_spec.hpp
Source/lib/r8brain_free_src/: CDSPBlockConvolver.h  CDSPFracInterpolator.h  CDSPHBDownsampler.h  CDSPRealFFT.h  r8bbase.h  r8butil.h
Source/pref/: DlgDurationOverrideEditor.cpp  DlgDurationOverrideEditor.h  DlgOutputDevice.cpp  DlgOutputDevice.h  DriverSettings.cpp  DriverSettingsGUI.cpp  UserPref.cpp  UserPref.h  UserPrefGUI.cpp  UserPrefGUI.h
Source/res/: ASIO2WASAPI2.rc  resource.h  resource.rc
Source/utils/: AppException.h  EventPerSecondCounter.h  IPolicyConfig.h  ResourceLoad.cpp  ResourceLoad.h  RingBuffer.h  SynchronizedClock.cpp  SynchronizedClock.h  WASAPIUtils.cpp  WASAPIUtils.h  WaveLoad.cpp  WaveLoad.h  accurateTime.cpp  accurateTime.h  clampSample.cpp  clampSample.h  dlgGetText.cpp  dlgGetText.h  dpiRaii.h  hexdump.cpp  hexdump.h  homeDirFilePath.cpp  homeDirFilePath.h  intervalBlock.h  json.hpp  logger.cpp  logger.h  raiiUtils.h  utf8convert.cpp  utf8convert.h  volumeRAII.cpp  volumeRAII.h  w32StringGetter.cpp  w32StringGetter.h
Tests/: catch.hpp  test_main.cpp  test_ringbuffer.cpp
